uptime and finish for production
